# flight-price-tracker

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .flake8  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/migrations/: env.py  init.sql
backend/src/: cache.py  config.py  database.py  main.py
backend/src/api/: docs.py  flights.py  health.py  tracking.py
backend/src/middleware/: __init__.py  error_handling.py  rate_limiting.py
backend/src/models/: notification_log.py  price_history.py  tracking_request.py
backend/src/services/: flight_service.py  price_monitoring_service.py  telegram_service.py  tracking_service.py  validation_service.py
backend/src/tasks/: notifications.py  price_check.py  scheduler.py  utils.py
frontend/: index.html  package.json  tracking.html
frontend/src/: index.html  tracking.html
frontend/src/scripts/: main.js  tracking.js
frontend/src/styles/: main.css  tracking.css
nginx/: nginx.conf
